Fixed form reset bug (sensor checkboxes were reset too) in UI, added raw measurement API handler, updated API docs
