# docs/swagger.json
@@ -14,38 +14,7 @@
     },
     "basePath": "/api/v1",
     "paths": {
-        "/nodes": {
-            "get": {
-                "security": [
-                    {
-                        "BasicAuth": []
-                    }
-                ],
-                "description": "Returns a list of all connected nodes by their hardware ID. Will time out in 300ms if any one of the nodes does not respond.",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "administration"
-                ],
-                "summary": "List nodes",
-                "responses": {
-                    "200": {
-                        "description": "Bare statistics for all the running and connected nodes",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/stats.Stats"
-                            }
-                        }
-                    },
-                    "500": {
-                        "description": "When the internal timeout for information retrieval expires"
-                    }
-                }
-            }
-        },
-        "/nodes/{id}/aggregated": {
+        "/aggregated": {
             "post": {
                 "security": [
                     {
@@ -74,6 +43,37 @@
                 "responses": {
                     "200": {
                         "description": "Bare statistics for all nodes in the measurement campaign. Will always include sensor status information.",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/stats.Stats"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "When the internal timeout for information retrieval expires"
+                    }
+                }
+            }
+        },
+        "/nodes": {
+            "get": {
+                "security": [
+                    {
+                        "BasicAuth": []
+                    }
+                ],
+                "description": "Returns a list of all connected nodes by their hardware ID. Will time out in 300ms if any one of the nodes does not respond.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "administration"
+                ],
+                "summary": "List nodes",
+                "responses": {
+                    "200": {
+                        "description": "Bare statistics for all the running and connected nodes",
                         "schema": {
                             "type": "array",
                             "items": {
@@ -123,6 +123,48 @@
                     }
                 }
             }
+        },
+        "/raw": {
+            "post": {
+                "security": [
+                    {
+                        "BasicAuth": []
+                    }
+                ],
+                "description": "Sends a raw measurement request to the nodes specified in `sensors` and returns a list of `stats.Stats` objects for all sensors taking part in the campaign. Will time out in `300ms` if any sensor does not respond.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "measurement"
+                ],
+                "summary": "Get a raw spectrum measurement from a list of nodes",
+                "parameters": [
+                    {
+                        "description": "Measurement request object",
+                        "name": "id",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/types.RawMeasurementRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Bare statistics for all nodes in the measurement campaign. Will always include sensor status information.",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/stats.Stats"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "When the internal timeout for information retrieval expires"
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -159,6 +201,10 @@
                     "description": "Start time in milliseconds since epoch (Unix time)",
                     "type": "integer"
                 },
+                "campaignId": {
+                    "description": "Campaign ID. For internal use only, will be ignored if not null",
+                    "type": "string"
+                },
                 "end": {
                     "description": "End time in milliseconds since epoch (Unix time)",
                     "type": "integer"
@@ -185,6 +231,30 @@
                 "timeRes": {
                     "description": "Time resolution in seconds",
                     "type": "integer"
+                }
+            }
+        },
+        "types.RawMeasurementRequest": {
+            "type": "object",
+            "properties": {
+                "begin": {
+                    "description": "Start time in milliseconds since epoch (Unix time)",
+                    "type": "integer"
+                },
+                "campaignId": {
+                    "description": "Campaign ID. For internal use only, will be ignored if not null",
+                    "type": "string"
+                },
+                "end": {
+                    "description": "End time in milliseconds since epoch (Unix time)",
+                    "type": "integer"
+                },
+                "sensors": {
+                    "description": "List of sensor hardware IDs to run the measurement campaign on",
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 }
             }
         }
